--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@
 }
 
 :root {
-	--primary-color : hsl(240, 75%, 98%);
-	--secondary-color : hsl(0, 0%, 75%);
+	--primary-color: hsl(240, 75%, 98%);
+	--secondary-color: hsl(0, 0%, 75%);
 }
 
 body {
+	overflow-x: hidden;
+	max-width: 100%;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 }
@@ -22,9 +24,20 @@ h2,h3,h4,.btn-cta,nav {
 img {
 	max-width: 100%;
 }
-
+ul {
+	list-style: none;
+	font-size: 1.2rem;
+}
+a {
+	text-decoration: none;
+	cursor: pointer;
+}
+a:hover, a:focus {
+	color: #dfdfdf;
+}
 .btn {
 	background-color: #2F65F9;
+	font-size: 1.2rem;
 	color: white;
 	padding: 1em 2em;
 	border-radius: 5px;
@@ -35,25 +48,18 @@ img {
 }
 .btn:hover {
 	background: blue;
+	color: white;
+}
+*:focus, .btn::-moz-focus-inner {
+	outline: none;
 }
 
 input{
+	font-family: 'Open Sans', sans-serif;
 	padding: 1em 2em;
 	border: 2px solid var(--secondary-color);
 	border-radius: 5px;
 	box-shadow: 0 3px 5px rgba(0,0,0,0.1);
-}
-ul {
-	list-style: none;
-	font-size: 1.2rem;
-}
-a {
-	text-decoration: none;
-	color: #000;
-	cursor: pointer;
-}
-a:hover {
-	color: #dfdfdf;
 }
 
 .container {
@@ -88,8 +94,9 @@ header .logo {
 header nav {
 	flex: 0.2;
 	font-weight: 400;
+	color: #000;
 }
-nav a:hover {
+nav a:hover,nav a:focus{
 	color: #696969;
 }
 #get-started {
@@ -112,12 +119,14 @@ nav a:hover {
 	margin-top: 2.5em;
 }
 .email input{
-	min-width: 70%;
+	min-width: 60%;
 	margin-right: 2em;
+	margin-bottom: 2em;
 }
 .btn-cta {
-	margin-top: 2em;
-	min-width: 20%;
+	display: inline-block;
+	padding: 1em 5em;
+	font-size: 1.4rem;
 }
 #features {
 	margin-top: 22vh;
@@ -159,13 +168,16 @@ nav a:hover {
 	color: #3DA08F;
 	border-bottom: 2px solid #3DA08F;
 }
+#features a:hover,#features a:focus {
+	color: #90bcb8;
+	border-color: #90bcb8;
+}
 .arrow {
 	margin-left: 10px;
 	width: 20px;
 }
 .review {
 	width: 400px;
-	max-width: 90%;
 	margin-top: 4em;
 	padding: 2em 3em;
 	background: white;
@@ -209,13 +221,13 @@ nav a:hover {
 }
 #get-access input {
 	width: 100%;
-	margin-bottom: 1em;
+	margin-bottom: 2em;
 }
 
 footer {
 	background-color: #07043B;
 	color: white;
-	padding: 8em 0;
+	padding: 7em 0;
 	font-size: 1.2rem;
 	text-align: left;
 }
@@ -224,12 +236,13 @@ footer a{
 }
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill,minmax(400px,1fr));
+	grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
 	align-items: center;
 	justify-content: center;
 }
 .footer-logo {
 	grid-column: 1/-1;
+	margin: 2em 0;
 }
 footer li {
 	margin-bottom: 10px;
@@ -272,7 +285,7 @@ footer ul {
 		flex: 0.4;
 	}
 	#get-started h2 {
-		font-size: 3.5rem;
+		font-size: 3rem;
 	}
 	#features h3 {
 		font-size: 2.5rem;
@@ -287,7 +300,7 @@ footer ul {
 	}
 	.container {
 		text-align: center;
-		width: 95%;
+		width: 100%;
 	}
 	.flex {
 		flex-direction: column;
@@ -301,7 +314,7 @@ footer ul {
 		align-items: flex-start;
 	}
 	footer {
-		padding-left: 6em;
+		padding-left: 5em;
 	}
 	header .flex {
 		flex-direction: row;
@@ -312,20 +325,19 @@ footer ul {
 
 	.left , .right {
 		flex: 1;
-		align-self: center;
 		margin-top: 5em;
 	}
 	#get-started h2 {
-		font-size: 2.5rem;
+		font-size: 2rem;
 	}
 	#features::before {
 		background-image: url(images/bg-curve-mobile.svg);
 	}
 	#features h3 {
-		font-size: 2rem;
+		font-size: 1.8rem;
 	}
 	#get-access h4 {
-		font-size: 2rem;
+		font-size: 1.8rem;
 	}
 	input {
 		width: 100%;
@@ -345,16 +357,20 @@ footer ul {
 	}
 	.review {
 		margin: 4em auto;
+		width: 95%;
 	}
 	#get-access .left,#get-access .right {
 		width: 100%;
 	}
-	.social-medias{
+	.social-medias li{
 		justify-content: center;
 		align-items: center;
 	}
 }
 @media screen and (max-width: 560px) {
+	html {
+		font-size: 9px;
+	}
 	header .logo {
 		flex: 0.4;
 	}
